[package]
name = "play-rust"
version = "0.1.0"
authors = ["juju <gliheng@live.com>"]
edition = "2018"

[dependencies]
actix-web = "4"
diesel = { version = "1.4.8", features = ["postgres", "uuid", "serde_json", "r2d2", "chrono"] }
r2d2 = "0.8.9"
dotenv = "0.15.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
